feat: add cover URL to BookCatalogItem and update related services and UI
- Added coverUrl field to BookCatalogItem model with getter and setter methods.
- Updated BookService to handle coverUrl during book addition and updates.
- Enhanced BookManagementPanel to include cover URL input and preview functionality.
- Modified KioskSearchBookPanel to display book cover images based on cover URL or ISBN.
- Implemented scrollable modal body for BookManagementPanel and MemberManagementPanel.
- Updated CSS styles for modal body scrollbars in both book and member management panels.